# kinova-ros-kinetic

./: README  README.md
kinova_bringup/: CMakeLists.txt
kinova_bringup/launch/: kinova_robot.launch
kinova_bringup/launch/config/: robot_parameters.yaml
kinova_control/: CMakeLists.txt
kinova_demo/: CMakeLists.txt
kinova_description/: CMakeLists.txt
kinova_driver/: CMakeLists.txt
kinova_driver/src/joint_trajectory_action/: gripper_command_action_server.cpp  joint_trajectory_action_server.cpp
kinova_gazebo/: CMakeLists.txt
kinova_moveit/inverse_kinematics_plugins/ikfast/j2n6s300_ikfast/: CMakeLists.txt  j2n6s300_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh  update_ikfast_plugin.sh~
kinova_moveit/inverse_kinematics_plugins/ikfast/j2s7s300_ikfast/: CMakeLists.txt
kinova_moveit/inverse_kinematics_plugins/ikfast/m1n6s300_ikfast/: CMakeLists.txt
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
kinova_moveit/kinova_arm_moveit_demo/include/: pick_place.h
kinova_moveit/kinova_arm_moveit_demo/src/: pick_place.cpp  test_accuracy.cpp
kinova_moveit/robot_configs/j2n6s300_moveit_config/: CMakeLists.txt
kinova_moveit/robot_configs/j2n6s300_moveit_config/config/: kinematics.yaml
kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: j2n6s300_demo.launch  move_group_j2n6s300.launch  moveit.rviz  (+1 more)
kinova_moveit/robot_configs/j2s7s300_moveit_config/: CMakeLists.txt
kinova_moveit/robot_configs/m1n6s300_moveit_config/: CMakeLists.txt
kinova_msgs/: CMakeLists.txt
kinova_msgs/msg/: TestPose.msg
(+1 files in other folders)
